--- a/catmap.cabal
+++ b/catmap.cabal
@@ -19,31 +19,18 @@ maintainer:         5m4rt.tr45h@gmail.com
 -- A copyright notice.
 -- copyright:
 -- category:
-extra-source-files: CHANGELOG.md
-
-library
-    -- exposed-modules:
-
-    -- Modules included in this library but not exported.
-    -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    -- build-depends:    base ^>=4.14.3.0
-    -- hs-source-dirs:   src
-    -- default-language: Haskell2010
+extra-source-files: CHANGELOG.md README.md LICENSE
 
 executable catmap
-    main-is:          Main.hs
+    ghc-options:    -O2 -threaded
+    main-is:        Main.hs
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:
-        base ^>=4.14.3.0,
-        catmap
+    build-depends:  base ^>= 4.14.3.0, gloss ^>= 1.13.2.2
 
     hs-source-dirs:   app
     default-language: Haskell2010
