--- a/catmap.cabal
+++ b/catmap.cabal
@@ -30,7 +30,7 @@ executable catmap
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:  base ^>= 4.14.3.0, gloss ^>= 1.13.2.2
+    build-depends:  base ^>= 4.14.3.0, gloss ^>= 1.13.2.2, directory ^>= 1.3.6.0
 
     hs-source-dirs:   app
     default-language: Haskell2010
